# codelabs

./: .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  pnpm-lock.yaml  requirements.txt  requirements_lock.txt
.aspect/cli/: cc_library.star  config.yaml  rules_cc.star
.github/workflows/: ci.yaml
backend/cmd/plugin/: BUILD.bazel  plugin.go
backend/cmd/server/: BUILD.bazel
cli/: BUILD.bazel  __main__.py  header.txt.tmpl
frontend/: BUILD.bazel
patches/: aspect-cli.patch
schema/logger/: BUILD.bazel  logger_connect.d.ts  logger_pb.d.ts
speller/lookup/: BUILD.bazel
speller/main/: BUILD.bazel
tools/: BUILD.bazel  py_header.bzl
