load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_update_packages")

npm_link_all_packages(name = "node_modules")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)

###########
# Settings for 'aspect configure', which uses Gazelle
# See https://github.com/bazelbuild/bazel-gazelle?tab=readme-ov-file#directives

# gazelle:prefix github.com/aspect-build/codelabs
# gazelle:js_project_naming_convention compile
# gazelle:exclude **/*_pb.d.ts
# gazelle:exclude **/*_connect.d.ts

# Any tests that are too expensive to run when using `bazel test //...` should
# be marked manual and listed in this test_suite.
test_suite(
    name = "manual_tests",
    tags = ["manual"],
    tests = [
        "//ios/LoggingClient/UITests",
    ],
    visibility = ["//:__subpackages__"],
)
