load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_test(
    name = "lookup-test_lib",
    size = "small",
    srcs = ["lookup-test.cc"],
    deps = [
        ":lookup_lib",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "lookup_lib",
    srcs = ["lookup.cc"],
    hdrs = ["lookup.h"],
    visibility = ["//:__subpackages__"],
    deps = ["@sqlite3"],
)
